# carpool

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  sync-dependencies.yml
benches/: compare.rs  queue.rs
examples/: dedup_window.rs  deduplicator.rs  queue.rs  quickstart.rs
src/: batcher.rs  collector.rs  config.rs  deduplicator.rs  dispatch.rs  error.rs  fetcher.rs  lib.rs  limiter.rs  loader.rs  queue.rs  transit.rs  window.rs
