[package]
name = "carpool"
version = "0.0.1"
edition = "2024"
rust-version = "1.93"
description = "Deduplicate and batch concurrent async requests through a collection window"
repository = "https://github.com/nullmonger/carpool"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["async", "batch", "dataloader", "dedup", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
tokio = { version = "1", default-features = false, features = ["sync", "time", "macros"] }
tracing = { version = "0.1", optional = true }
metrics = { version = "0.24", optional = true }

[features]
default = []
tracing = ["dep:tracing"]
metrics = ["dep:metrics"]

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt", "test-util"] }
