[package]
name = "carpool"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
description = "Deduplicate and batch concurrent async requests through a collection window"
repository = "https://github.com/nullmonger/carpool"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["async", "batch", "dataloader", "dedup", "tokio"]
categories = ["asynchronous", "concurrency"]
include = [
    "src/",
    "benches/",
    "examples/",
    "README.md",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
]

[dependencies]
tokio = { version = "1.16", default-features = false, features = ["sync"] }

[dev-dependencies]
criterion = "0.8.2"
tokio = { version = "1.16", default-features = false, features = ["macros", "rt", "time"] }

[[bench]]
name = "queue"
harness = false
